# Football-xG-Match-Outcome-Prediction

./: .gitignore  README.md  football_xg_build_prompt.md  football_xg_project_plan.docx  football_xg_project_plan.md  pyproject.toml  requirements.lock.txt  requirements.txt
notebooks/: 01_data_survey.ipynb
src/football_xg/: __init__.py  config.py  data.py  validate.py
tests/: test_config.py  test_data.py  test_validate.py
